build.gcc/du3456g.output
Terminals unused in grammar

   RECORD


Grammar

    0 $accept: mlaskal "end of file"

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON blockP DOT

    2 blockP: labelBlock constBlock typeBlock varBlock functionBlock statementsBlock

    3 labelBlock: %empty
    4           | LABEL UINT uintsLabels SEMICOLON

    5 uintsLabels: %empty
    6            | COMMA UINT uintsLabels

    7 constBlock: %empty
    8           | CONST constantDecl constantDecls

    9 constantDecl: IDENTIFIER EQ UINT SEMICOLON
   10             | IDENTIFIER EQ REAL SEMICOLON
   11             | IDENTIFIER EQ STRING SEMICOLON
   12             | IDENTIFIER EQ IDENTIFIER SEMICOLON
   13             | IDENTIFIER EQ OPER_SIGNADD UINT SEMICOLON
   14             | IDENTIFIER EQ OPER_SIGNADD REAL SEMICOLON

   15 constantDecls: %empty
   16              | constantDecl constantDecls

   17 typeBlock: %empty
   18          | TYPE typeDecl typeDecls

   19 typeDecl: IDENTIFIER EQ type SEMICOLON

   20 typeDecls: %empty
   21          | typeDecl typeDecls

   22 varBlock: %empty
   23         | VAR varDecl varDecls

   24 varDecl: IDENTIFIER identifiers COLON type SEMICOLON

   25 identifiers: %empty
   26            | COMMA IDENTIFIER identifiers

   27 varDecls: %empty
   28         | varDecl varDecls

   29 functionBlock: %empty
   30              | funcProcDecl funcProcDecls

   31 $@1: %empty

   32 funcProcDecl: funcProcHeader SEMICOLON $@1 block SEMICOLON

   33 funcProcHeader: functionHeader
   34               | procedureHeader

   35 funcProcDecls: %empty
   36              | funcProcDecl funcProcDecls

   37 statementsBlock: %empty
   38                | BEGIN statement statements END

   39 statements: %empty
   40           | SEMICOLON statement statements

   41 block: labelBlock constBlock typeBlock varBlock BEGIN statement statements END

   42 procedureHeader: PROCEDURE IDENTIFIER functionParameters

   43 functionParameters: %empty
   44                   | LPAR formalParameters RPAR

   45 functionHeader: FUNCTION IDENTIFIER functionParameters COLON IDENTIFIER

   46 formalParameters: VAR IDENTIFIER identifiers COLON IDENTIFIER formalParameterss
   47                 | IDENTIFIER identifiers COLON IDENTIFIER formalParameterss

   48 formalParameterss: %empty
   49                  | SEMICOLON formalParameters

   50 type: ordinalType
   51     | arrayType
   52     | IDENTIFIER

   53 ordinalType: ordinalConstant DOTDOT ordinalConstant

   54 arrayType: ARRAY LSBRA ordinalOrID ordinalOrIDs RSBRA OF type

   55 ordinalOrID: IDENTIFIER
   56            | ordinalType

   57 ordinalOrIDs: %empty
   58             | COMMA ordinalOrID ordinalOrIDs

   59 statement: %empty
   60          | UINT COLON matchedStmt
   61          | matchedStmt
   62          | UINT COLON unmatchedStmt
   63          | unmatchedStmt

   64 matchedStmt: assignment
   65            | procedureStmt
   66            | gotoStmt
   67            | BEGIN statement statements END
   68            | IF expression THEN matchedStmt ELSE matchedStmt
   69            | WHILE expression DO matchedStmt
   70            | repeatStmt
   71            | FOR IDENTIFIER ASSIGN expression FOR_DIRECTION expression DO matchedStmt

   72 unmatchedStmt: IF expression THEN statement
   73              | IF expression THEN matchedStmt ELSE unmatchedStmt
   74              | WHILE expression DO unmatchedStmt
   75              | FOR IDENTIFIER ASSIGN expression FOR_DIRECTION expression DO unmatchedStmt

   76 assignment: variable ASSIGN expression

   77 procedureStmt: IDENTIFIER
   78              | IDENTIFIER LPAR realParameters RPAR

   79 gotoStmt: GOTO UINT

   80 repeatStmt: REPEAT statement statements UNTIL expression

   81 variable: IDENTIFIER
   82         | arrayReference

   83 arrayReference: variable LSBRA expression expressions RSBRA

   84 expressions: %empty
   85            | COMMA expression expressions

   86 realParameters: expression
   87               | expression COMMA realParameters

   88 expression: simpleExpression relationalExpression

   89 relationalExpression: %empty
   90                     | OPER_REL simpleExpression
   91                     | EQ simpleExpression

   92 simpleExpression: OPER_SIGNADD term terms
   93                 | term terms

   94 term: factor factors

   95 terms: %empty
   96      | OPER_SIGNADD term terms
   97      | OR term terms

   98 factor: unsignedConstant
   99       | variable
  100       | IDENTIFIER LPAR realParameters RPAR
  101       | LPAR expression RPAR
  102       | NOT factor

  103 factors: %empty
  104        | OPER_MUL factor

  105 unsignedConstant: UINT
  106                 | REAL
  107                 | STRING

  108 ordinalConstant: OPER_SIGNADD IDENTIFIER
  109                | IDENTIFIER
  110                | OPER_SIGNADD UINT
  111                | UINT


Terminals, with rules where they appear

"end of file" (0) 0
error (256)
PROGRAM (258) 1
LABEL (259) 4
CONST (260) 8
TYPE (261) 18
VAR (262) 23 46
BEGIN (263) 38 41 67
END (264) 38 41 67
PROCEDURE (265) 42
FUNCTION (266) 45
ARRAY (267) 54
OF (268) 54
GOTO (269) 79
IF (270) 68 72 73
THEN (271) 68 72 73
ELSE (272) 68 73
WHILE (273) 69 74
DO (274) 69 71 74 75
REPEAT (275) 80
UNTIL (276) 80
FOR (277) 71 75
OR (278) 97
NOT (279) 102
RECORD (280)
IDENTIFIER <mlc::ls_id_index> (281) 1 9 10 11 12 13 14 19 24 26 42
    45 46 47 52 55 71 75 77 78 81 100 108 109
UINT <mlc::ls_int_index> (282) 4 6 9 13 60 62 79 105 110 111
REAL <mlc::ls_real_index> (283) 10 14 106
STRING <mlc::ls_str_index> (284) 11 107
SEMICOLON (285) 1 4 9 10 11 12 13 14 19 24 32 40 49
DOT (286) 1
COMMA (287) 6 26 58 85 87
EQ (288) 9 10 11 12 13 14 19 91
COLON (289) 24 45 46 47 60 62
LPAR (290) 44 78 100 101
RPAR (291) 44 78 100 101
DOTDOT (292) 53
LSBRA (293) 54 83
RSBRA (294) 54 83
ASSIGN (295) 71 75 76
OPER_REL <mlc::DUTOKGE_OPER_REL> (296) 90
OPER_SIGNADD <mlc::DUTOKGE_OPER_SIGNADD> (297) 13 14 92 96 108 110
OPER_MUL <mlc::DUTOKGE_OPER_MUL> (298) 104
FOR_DIRECTION <mlc::DUTOKGE_FOR_DIRECTION> (299) 71 75


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
mlaskal (46)
    on left: 1, on right: 0
blockP (47)
    on left: 2, on right: 1
labelBlock (48)
    on left: 3 4, on right: 2 41
uintsLabels (49)
    on left: 5 6, on right: 4 6
constBlock (50)
    on left: 7 8, on right: 2 41
constantDecl (51)
    on left: 9 10 11 12 13 14, on right: 8 16
constantDecls (52)
    on left: 15 16, on right: 8 16
typeBlock (53)
    on left: 17 18, on right: 2 41
typeDecl (54)
    on left: 19, on right: 18 21
typeDecls (55)
    on left: 20 21, on right: 18 21
varBlock (56)
    on left: 22 23, on right: 2 41
varDecl (57)
    on left: 24, on right: 23 28
identifiers <std::deque<mlc::ls_id_index>> (58)
    on left: 25 26, on right: 24 26 46 47
varDecls (59)
    on left: 27 28, on right: 23 28
functionBlock (60)
    on left: 29 30, on right: 2
funcProcDecl (61)
    on left: 32, on right: 30 36
$@1 (62)
    on left: 31, on right: 32
funcProcHeader <mlc::ls_id_index> (63)
    on left: 33 34, on right: 32
funcProcDecls (64)
    on left: 35 36, on right: 30 36
statementsBlock (65)
    on left: 37 38, on right: 2
statements (66)
    on left: 39 40, on right: 38 40 41 67 80
block (67)
    on left: 41, on right: 32
procedureHeader <mlc::ls_id_index> (68)
    on left: 42, on right: 34
functionParameters <mlc::parameter_list_ptr> (69)
    on left: 43 44, on right: 42 45
functionHeader <mlc::ls_id_index> (70)
    on left: 45, on right: 33
formalParameters <mlc::parameter_list_ptr> (71)
    on left: 46 47, on right: 44 49
formalParameterss <mlc::parameter_list_ptr> (72)
    on left: 48 49, on right: 46 47
type <mlc::type_pointer> (73)
    on left: 50 51 52, on right: 19 24 54
ordinalType <mlc::type_pointer> (74)
    on left: 53, on right: 50 56
arrayType <mlc::type_pointer> (75)
    on left: 54, on right: 51
ordinalOrID <mlc::type_pointer> (76)
    on left: 55 56, on right: 54 58
ordinalOrIDs <std::deque<mlc::type_pointer>> (77)
    on left: 57 58, on right: 54 58
statement (78)
    on left: 59 60 61 62 63, on right: 38 40 41 67 72 80
matchedStmt (79)
    on left: 64 65 66 67 68 69 70 71, on right: 60 61 68 69 71 73
unmatchedStmt (80)
    on left: 72 73 74 75, on right: 62 63 73 74 75
assignment (81)
    on left: 76, on right: 64
procedureStmt (82)
    on left: 77 78, on right: 65
gotoStmt (83)
    on left: 79, on right: 66
repeatStmt (84)
    on left: 80, on right: 70
variable (85)
    on left: 81 82, on right: 76 83 99
arrayReference (86)
    on left: 83, on right: 82
expressions (87)
    on left: 84 85, on right: 83 85
realParameters (88)
    on left: 86 87, on right: 78 87 100
expression (89)
    on left: 88, on right: 68 69 71 72 73 74 75 76 80 83 85 86 87 101
relationalExpression (90)
    on left: 89 90 91, on right: 88
simpleExpression (91)
    on left: 92 93, on right: 88 90 91
term (92)
    on left: 94, on right: 92 93 96 97
terms (93)
    on left: 95 96 97, on right: 92 93 96 97
factor (94)
    on left: 98 99 100 101 102, on right: 94 102 104
factors (95)
    on left: 103 104, on right: 94
unsignedConstant (96)
    on left: 105 106 107, on right: 98
ordinalConstant <mlc::ls_int_index> (97)
    on left: 108 109 110 111, on right: 53


State 0

    0 $accept: . mlaskal "end of file"
    1 mlaskal: . PROGRAM IDENTIFIER SEMICOLON blockP DOT

    PROGRAM  shift, and go to state 1

    mlaskal  go to state 2


State 1

    1 mlaskal: PROGRAM . IDENTIFIER SEMICOLON blockP DOT

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: mlaskal . "end of file"

    "end of file"  shift, and go to state 4


State 3

    1 mlaskal: PROGRAM IDENTIFIER . SEMICOLON blockP DOT

    SEMICOLON  shift, and go to state 5


State 4

    0 $accept: mlaskal "end of file" .

    $default  accept


State 5

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON . blockP DOT
    2 blockP: . labelBlock constBlock typeBlock varBlock functionBlock statementsBlock
    3 labelBlock: . %empty  [CONST, TYPE, VAR, BEGIN, PROCEDURE, FUNCTION, DOT]
    4           | . LABEL UINT uintsLabels SEMICOLON

    LABEL  shift, and go to state 6

    $default  reduce using rule 3 (labelBlock)

    blockP      go to state 7
    labelBlock  go to state 8


State 6

    4 labelBlock: LABEL . UINT uintsLabels SEMICOLON

    UINT  shift, and go to state 9


State 7

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON blockP . DOT

    DOT  shift, and go to state 10


State 8

    2 blockP: labelBlock . constBlock typeBlock varBlock functionBlock statementsBlock
    7 constBlock: . %empty  [TYPE, VAR, BEGIN, PROCEDURE, FUNCTION, DOT]
    8           | . CONST constantDecl constantDecls

    CONST  shift, and go to state 11

    $default  reduce using rule 7 (constBlock)

    constBlock  go to state 12


State 9

    4 labelBlock: LABEL UINT . uintsLabels SEMICOLON
    5 uintsLabels: . %empty  [SEMICOLON]
    6            | . COMMA UINT uintsLabels

    COMMA  shift, and go to state 13

    $default  reduce using rule 5 (uintsLabels)

    uintsLabels  go to state 14


State 10

    1 mlaskal: PROGRAM IDENTIFIER SEMICOLON blockP DOT .

    $default  reduce using rule 1 (mlaskal)


State 11

    8 constBlock: CONST . constantDecl constantDecls
    9 constantDecl: . IDENTIFIER EQ UINT SEMICOLON
   10             | . IDENTIFIER EQ REAL SEMICOLON
   11             | . IDENTIFIER EQ STRING SEMICOLON
   12             | . IDENTIFIER EQ IDENTIFIER SEMICOLON
   13             | . IDENTIFIER EQ OPER_SIGNADD UINT SEMICOLON
   14             | . IDENTIFIER EQ OPER_SIGNADD REAL SEMICOLON

    IDENTIFIER  shift, and go to state 15

    constantDecl  go to state 16


State 12

    2 blockP: labelBlock constBlock . typeBlock varBlock functionBlock statementsBlock
   17 typeBlock: . %empty  [VAR, BEGIN, PROCEDURE, FUNCTION, DOT]
   18          | . TYPE typeDecl typeDecls

    TYPE  shift, and go to state 17

    $default  reduce using rule 17 (typeBlock)

    typeBlock  go to state 18


State 13

    6 uintsLabels: COMMA . UINT uintsLabels

    UINT  shift, and go to state 19


State 14

    4 labelBlock: LABEL UINT uintsLabels . SEMICOLON

    SEMICOLON  shift, and go to state 20


State 15

    9 constantDecl: IDENTIFIER . EQ UINT SEMICOLON
   10             | IDENTIFIER . EQ REAL SEMICOLON
   11             | IDENTIFIER . EQ STRING SEMICOLON
   12             | IDENTIFIER . EQ IDENTIFIER SEMICOLON
   13             | IDENTIFIER . EQ OPER_SIGNADD UINT SEMICOLON
   14             | IDENTIFIER . EQ OPER_SIGNADD REAL SEMICOLON

    EQ  shift, and go to state 21


State 16

    8 constBlock: CONST constantDecl . constantDecls
    9 constantDecl: . IDENTIFIER EQ UINT SEMICOLON
   10             | . IDENTIFIER EQ REAL SEMICOLON
   11             | . IDENTIFIER EQ STRING SEMICOLON
   12             | . IDENTIFIER EQ IDENTIFIER SEMICOLON
   13             | . IDENTIFIER EQ OPER_SIGNADD UINT SEMICOLON
   14             | . IDENTIFIER EQ OPER_SIGNADD REAL SEMICOLON
   15 constantDecls: . %empty  [TYPE, VAR, BEGIN, PROCEDURE, FUNCTION, DOT]
   16              | . constantDecl constantDecls

    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 15 (constantDecls)

    constantDecl   go to state 22
    constantDecls  go to state 23


State 17

   18 typeBlock: TYPE . typeDecl typeDecls
   19 typeDecl: . IDENTIFIER EQ type SEMICOLON

    IDENTIFIER  shift, and go to state 24

    typeDecl  go to state 25


State 18

    2 blockP: labelBlock constBlock typeBlock . varBlock functionBlock statementsBlock
   22 varBlock: . %empty  [BEGIN, PROCEDURE, FUNCTION, DOT]
   23         | . VAR varDecl varDecls

    VAR  shift, and go to state 26

    $default  reduce using rule 22 (varBlock)

    varBlock  go to state 27


State 19

    5 uintsLabels: . %empty  [SEMICOLON]
    6            | . COMMA UINT uintsLabels
    6            | COMMA UINT . uintsLabels

    COMMA  shift, and go to state 13

    $default  reduce using rule 5 (uintsLabels)

    uintsLabels  go to state 28


State 20

    4 labelBlock: LABEL UINT uintsLabels SEMICOLON .

    $default  reduce using rule 4 (labelBlock)


State 21

    9 constantDecl: IDENTIFIER EQ . UINT SEMICOLON
   10             | IDENTIFIER EQ . REAL SEMICOLON
   11             | IDENTIFIER EQ . STRING SEMICOLON
   12             | IDENTIFIER EQ . IDENTIFIER SEMICOLON
   13             | IDENTIFIER EQ . OPER_SIGNADD UINT SEMICOLON
   14             | IDENTIFIER EQ . OPER_SIGNADD REAL SEMICOLON

    IDENTIFIER    shift, and go to state 29
    UINT          shift, and go to state 30
    REAL          shift, and go to state 31
    STRING        shift, and go to state 32
    OPER_SIGNADD  shift, and go to state 33


State 22

    9 constantDecl: . IDENTIFIER EQ UINT SEMICOLON
   10             | . IDENTIFIER EQ REAL SEMICOLON
   11             | . IDENTIFIER EQ STRING SEMICOLON
   12             | . IDENTIFIER EQ IDENTIFIER SEMICOLON
   13             | . IDENTIFIER EQ OPER_SIGNADD UINT SEMICOLON
   14             | . IDENTIFIER EQ OPER_SIGNADD REAL SEMICOLON
   15 constantDecls: . %empty  [TYPE, VAR, BEGIN, PROCEDURE, FUNCTION, DOT]
   16              | . constantDecl constantDecls
   16              | constantDecl . constantDecls

    IDENTIFIER  shift, and go to state 15

    $default  reduce using rule 15 (constantDecls)

    constantDecl   go to state 22
    constantDecls  go to state 34


State 23

    8 constBlock: CONST constantDecl constantDecls .

    $default  reduce using rule 8 (constBlock)


State 24
